fix: resolved bill status prior to storing in db, fixed state rep, federal rep UI regression - only 1 page
